--- a/Leaves/Base.lproj/Main.storyboard
+++ b/Leaves/Base.lproj/Main.storyboard
@@ -627,21 +627,21 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="LeaveEditID" rowHeight="61" id="3pb-li-5WK" customClass="LeaveEditingCell" customModule="Leaves" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="61"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="LeaveEditID" rowHeight="65" id="3pb-li-5WK" customClass="LeaveEditingCell" customModule="Leaves" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="65"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3pb-li-5WK" id="SgV-pj-Sdh">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="60.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="64.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Working Leave" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wlH-X3-su5">
-                                                    <rect key="frame" x="12" y="5" width="279" height="50.5"/>
+                                                    <rect key="frame" x="12" y="5" width="279" height="54.5"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                     <color key="textColor" red="0.16078431369999999" green="0.48627450979999998" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="74v-I5-GRg">
-                                                    <rect key="frame" x="303" y="15.5" width="60" height="30"/>
+                                                <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="74v-I5-GRg">
+                                                    <rect key="frame" x="303" y="17.5" width="60" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="60" id="IyL-g4-Hhs"/>
                                                     </constraints>
@@ -664,15 +664,15 @@
                                             <outlet property="LeaveTitle" destination="wlH-X3-su5" id="tlA-Uv-wun"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SyncID" id="WZX-cL-biZ" customClass="SyncCell" customModule="Leaves" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="89" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SyncID" rowHeight="50" id="WZX-cL-biZ" customClass="SyncCell" customModule="Leaves" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="93" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WZX-cL-biZ" id="1XJ-1Q-NT8">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="49.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sync" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AP2-Zk-CnB">
-                                                    <rect key="frame" x="12" y="5" width="60" height="33.5"/>
+                                                    <rect key="frame" x="12" y="5" width="60" height="39.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="60" id="inz-WO-l5c"/>
                                                     </constraints>
@@ -681,14 +681,14 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Eau-Q9-qHJ">
-                                                    <rect key="frame" x="316" y="6" width="49" height="31"/>
+                                                    <rect key="frame" x="316" y="9.5" width="49" height="31"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="47" id="qTQ-Na-gcR"/>
                                                         <constraint firstAttribute="height" constant="31" id="wX7-M6-FdA"/>
                                                     </constraints>
                                                 </switch>
                                                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="Tpx-bC-Hfb">
-                                                    <rect key="frame" x="343" y="11" width="20" height="20"/>
+                                                    <rect key="frame" x="343" y="15" width="20" height="20"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="FVy-pv-0Ao"/>
                                                         <constraint firstAttribute="width" constant="20" id="fXQ-5S-thU"/>
@@ -711,15 +711,15 @@
                                             <outlet property="SyncLabel" destination="AP2-Zk-CnB" id="1Ac-0T-op7"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="LogoutID" id="eZd-Te-wQs" customClass="LogoutCell" customModule="Leaves" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="133" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="LogoutID" rowHeight="50" id="eZd-Te-wQs" customClass="LogoutCell" customModule="Leaves" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="143" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eZd-Te-wQs" id="TG0-56-6Uo">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="49.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dv8-e7-kCl">
-                                                    <rect key="frame" x="5" y="5" width="365" height="33.5"/>
+                                                    <rect key="frame" x="5" y="5" width="365" height="39.5"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                     <state key="normal" title="Logout"/>
                                                 </button>
@@ -736,7 +736,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProfileID" rowHeight="130" id="gbe-BK-9aH" customClass="ProfileCell" customModule="Leaves" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="177" width="375" height="130"/>
+                                        <rect key="frame" x="0.0" y="193" width="375" height="130"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gbe-BK-9aH" id="aia-Y9-Uew">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="129.5"/>
